# vieshare-axum

./: Cargo.toml  Dev.md  README.md  openapi.yaml
config/: default.json  default.toml  test.json
data/: sample.json
db/: db.rs  pocketbase_schema.db
docs/: README.md
migrations/: 20240901000000_create_vieshare_tables.sql
src/: app.rs  errors.rs  main.rs  settings.rs
src/controllers/: categories.rs  mod.rs  pocketbase.rs  stores.rs  users.rs
src/forms/: auth.rs  validator.rs
src/models/: auth.rs  mod.rs  pocketbase.rs  user.rs  util.rs
src/routes/: mod.rs  pocketbase.rs  status.rs
